--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200;400;500;700&family=Nunito&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'JetBrains Mono', monospace;
+}
+:root {
+  --clr-p: #fa5b0f;
+  --clr-s: #FFB632;
+  --clr-accent: #ffe9c2;
+  --clr-bg: #dce5f2;
+}
+.landingPage {
+  height: 100vh;
+}
+.landingPage .left {
+  background: var(--clr-p);
+}
+.landingPage .left > span {
+  color: #fff;
+  font-size: 2em;
+  text-transform: uppercase;
+  width: 70%;
+}
+.landingPage .right {
+  background: var(--clr-s);
+}
+.landingPage .right .right_inner-cont {
+  background-color: var(--clr-accent);
+  border-radius: 12px;
+  width: 70%;
+}
+.btnLogin {
+  background: var(--clr-p);
+  color: #fff;
+  border-radius: 12px;
+  border: none;
+  font-weight: 700;
+}
+.btnLogin:hover {
+  background: var(--clr-s);
+  color: var(--clr-p);
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* dashboard */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.dashboard-cont {
+  display: grid;
+  grid-template-rows: 55% 55%;
+  grid-row-gap: 1em;
+  /* overflow-y: hidden ; */
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%; */
+
+
 }
 
-.App-link {
-  color: #61dafb;
+.login-logo{
+  /* border: solid yellow 1px; */
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  margin-right: 3em;
+  margin-top:1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.log-in{
+  border: yellow;
 }
+
+
